<resources>
    <string name="app_name">Tuition Helper</string>

    <string name="email_string">Email</string>
    <string name="username_string">Name</string>
    <string name="tutor_string">Tutor</string>
    <string name="student_string">Student</string>

    <string name="sign_in_password_string">Password</string>
    <string name="sign_in_button_string">Sign in</string>
    <string name="sign_in_activity_name_string">Sign in your account or create a new one</string>
    <string name="sign_in_error_fields_empty">All fields should be filled</string>
    <string name="sign_in_error_incorrect_credentials">Either email or password are incorrect</string>

    <string name="sign_up_password_string">Password (6&#8211;12 characters)</string>
    <string name="sign_up_button_string">Sign up</string>
    <string name="sign_up_error_password_illegal_size">Your password should be 6&#8211;12 characters long</string>
    <string name="sign_up_error_unable_to_complete">Unable to complete operation</string>
    <string name="sign_up_error_type_is_not_chosen">Please choose your account type</string>

    <string name="main_menu_contacts_button">Contacts</string>
    <string name="main_menu_search_button">Search</string>
    <string name="main_menu_tasks_button">Tasks</string>
    <string name="main_menu_additional_info_hint">Add some information by clicking on your avatar.</string>

    <string name="menu_contacts">Contacts</string>
    <string name="menu_tasks">Tasks</string>
    <string name="menu_search">Search</string>

    <string name="edit_account_ainfo_hint">You can write some information about yourself here</string>
    <string name="edit_account_camera_button">Camera</string>
    <string name="edit_account_storage_button">Storage</string>
    <string name="edit_account_save_button">Save changes</string>

    <string name="tasks_my_tasks_list">Tasks for you</string>
    <string name="tasks_other_tasks_list">Task for your students</string>

</resources>
