<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/MainMenuFragment_FriendsListButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_menu_contacts_button" />

            <Button
                android:id="@+id/MainMenuFragment_SearchButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_menu_search_button" />

            <Button
                android:id="@+id/MainMenuFragment_TasksButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_menu_tasks_button" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>