<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".SignInActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="2"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/ic_app_logo_big" />

    <ProgressBar
        android:id="@+id/SignInActivity_ProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:indeterminate="true"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:text="@string/sign_in_activity_name_string"
            android:textColor="#000000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/SignInActivity_UsernameEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/email_string"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textSize="14sp"
            android:theme="@style/AppTheme" />

        <EditText
            android:id="@+id/SignInActivity_passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/sign_in_password_string"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="14sp"
            android:theme="@style/AppTheme" />

        <TextView
            android:id="@+id/SignInActivity_errorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:textAlignment="center"
            android:textColor="#F44336"
            android:textSize="14sp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/SignInActivity_signInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="64dp"
            android:layout_marginBottom="8dp"
            android:onClick="SignInButton_ClickListener"
            android:text="@string/sign_in_button_string"
            android:theme="@style/AppTheme" />

        <Button
            android:id="@+id/SignInActivity_signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="64dp"
            android:layout_marginBottom="8dp"
            android:onClick="SignUpButton_ClickListener"
            android:text="@string/sign_up_button_string"
            android:theme="@style/AppTheme" />

    </LinearLayout>

</LinearLayout>