<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/ic_app_logo_big" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/SignUp_usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/username_string"
            android:inputType="textEmailAddress"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/SignUp_emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/email_string"
            android:inputType="textEmailAddress"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/SignUp_passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/sign_up_password_string"
            android:inputType="textPassword"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/SignUp_errorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:textAlignment="center"
            android:textColor="#F44336"
            android:visibility="invisible" />

        <Button
            android:id="@+id/SignUp_signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="64dp"
            android:layout_marginBottom="8dp"
            android:text="@string/sign_up_button_string" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal|center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/SignInActivity_googleSignInButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp" />

            <ImageButton
                android:id="@+id/SignInActivity_facebookSignInButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp" />

            <ImageButton
                android:id="@+id/SignInActivity_twitterSignInButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>