<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditAccountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/EditAccount_SaveButton"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">

            <ImageView
                android:id="@+id/EditAccount_AvatarImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:padding="4dp"
                android:scaleType="centerInside" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/EditAccount_CameraButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:onClick="CameraButtonListener"
                    android:text="@string/edit_account_camera_button" />

                <Button
                    android:id="@+id/EditAccount_StorageButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:onClick="StorageButtonListener"
                    android:text="@string/edit_account_storage_button" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="4">

            <EditText
                android:id="@+id/EditAccount_NameEditText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/EditAccount_AInfoEditText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="4dp"
                android:layout_weight="3"
                android:ems="10"
                android:gravity="start"
                android:hint="@string/edit_account_ainfo_hint"
                android:inputType="textPersonName"
                android:singleLine="false"
                android:textAlignment="viewStart"
                android:textStyle="italic" />
        </LinearLayout>

        <TextView
            android:id="@+id/EditAccount_ErrorTextView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:textAlignment="center"
            android:textColor="#B71C1C"
            android:visibility="invisible" />
    </LinearLayout>

    <Button
        android:id="@+id/EditAccount_SaveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="SaveButtonListener"
        android:text="@string/edit_account_save_button" />

</RelativeLayout>